--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,13 @@
 
 /* Your CSS Code here. */
+.heading{
+
+	width:200px;
+	background-color:purple;
+	border-left-width:5px;
+	border-left:green;
+	padding:10px;
+	font-size:20px;
+	color:white;
+	
+}
