--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 
 /* Your CSS Code here. */
-.heading{
-
+.main{
 	width:200px;
-	background-color:purple;
+	background-color:purple;	
+}
+
+.heading{
 	border-left-width:5px;
-	border-left:green;
-	padding:10px;
+	border-left:5px solid green;
 	font-size:20px;
 	color:white;
-	
+	padding:10px;
 }
